--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
+    "vee-validate": "^4.2.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
